correct z-index

--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -348,7 +348,7 @@ $height: 4px
 	top: 0
 	left: 0
 	background: rgba(0, 0, 0, .8)
-	z-index: 401
+	z-index: 200
 	.portfolio__description
 		h3
 			font-size: 3rem
